# goit-pythonweb-hw-012

./: Dockerfile  pyproject.toml  requirements.txt
app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
docs/docs/source/: conf.py  index.rst
docs/source/: conf.py  index.rst
tests/: conftest.py  test_api.py  test_crud.py
